# aws-readonly-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/aws_readonly_mcp/: __init__.py  server.py
tests/: test_safety.py
