[project]
name = "aws-readonly-mcp"
version = "0.1.0"
description = "A read-only Model Context Protocol (MCP) server for safely inspecting AWS accounts."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.2.0",
    "boto3>=1.34.0",
]

[project.scripts]
aws-readonly-mcp = "aws_readonly_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aws_readonly_mcp"]
